# Version 0.16

## New Features

- replace placeholder text on songbar to be icons -- kaneryu on 2025-01-21



# Version 0.15

## New Features

- Song no longer downloads playback info from internet if it's already downloaded -- kaneryu on 2025-01-11

## Bugfixes

- Fix searchModel returning KImage living in different thread -- kaneryu on 2025-01-11
- fix multiple bugs related to downloading songs -- kaneryu on 2025-01-19
- fix bug where songs could not be played if the download was corrupted -- kaneryu on 2025-01-19
- Add mutexes to increase thread safety -- kaneryu on 2025-01-21



# Version 0.14

## New Features

- Add song downloading -- kaneryu on 2025-01-06

## Bugfixes

- fix None in coverconvert caused by imageCache being set too early -- kaneryu on 2025-01-06
- try a fix for no corner radius showing in the songbar image -- kaneryu on 2025-01-06
- Fix random application crash by not directly accessing song object that lives in a different thread using QML. -- kaneryu on 2025-01-07
- fix bug where QML didn't recive the song object properly -- kaneryu on 2025-01-08
- Try another fix for random application crashes because trying to access Song in different thread -- kaneryu on 2025-01-08
- Speed up setqueue by a bit -- kaneryu on 2025-01-11
- Yet another try to fix random application crashes, using an interface to access KImage living in different thread -- kaneryu on 2025-01-11



# Version 0.13

## New Features

- Improve songbar, add threading to non-async bgworker, refactor some stuff -- kaneryu on 2025-01-02

## Bugfixes

- added fault tolerance to convertocover by making sure that cache is always set to a real cache instead of None -- kaneryu on 2025-01-03
- added fault tolerance to the queue by allowing it to ask for a song's data to be refetched. -- kaneryu on 2025-01-04



# Version 0.12

## New Features

- complete alpha songbar -- kaneryu on 2024-12-26



# Version 0.11

## New Features
