@@ -3,3 +3,7 @@
 ## New Features
 
 - replace placeholder text on songbar to be icons -- kaneryu on 2025-01-21
+
+## Bugfixes
+
+- fix spacing and icon height -- kaneryu on 2025-01-22
